# spot2_assistant

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.py
app/: __init__.py  main.py  settings.py
app/agents/: __init__.py  field_extractor.py  form_validator.py  root_agent.py
app/agents/tools/: __init__.py  tools.py
app/models/: __init__.py  property_form.py
app/utils/: __init__.py  state_management.py
frontend/: __init__.py  app.py
frontend/components/: __init__.py  chat_display.py  message_input.py  response_handler.py
frontend/services/: __init__.py  assistant_service.py
frontend/utils/: __init__.py  session_manager.py
requirements/: base.in  base.txt  constraints.txt  dev.in  dev.txt  pip-tools.in  pip-tools.txt  quality.in  quality.txt  test.in  test.txt
