# Python project configuration file.
[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = 'spot2_assistant'
description = 'Real Estate Assistant powered by Google AI'
readme = 'README.md'
authors = [{name = 'Your Name', email = 'your.email@example.com'}]
version = '0.1.0'
requires-python = '>=3.9'
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

# ----------
# Herramientas de calidad
# ----------

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ['app', 'frontend']
skip_glob = ['*/migrations/*.py', '*/venv/*']

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
python_version = "3.9"

[tool.pylint.MASTER]
py-version = '3.9.0'
ignore = ['migrations']

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'too-few-public-methods',
    'too-many-arguments',
    'too-many-instance-attributes',
]

[tool.pytest.ini_options]
addopts = '--verbosity=3'
python_files = ['test_*.py']